samples/_failures_safe/1761325095_ae5103_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f80e753b.c: In function ‘main’:
./samples/SAFE/__tmp_f80e753b.c:142:29: error: expected declaration or statement at end of input
  142 |                             result[i][j] += (int)product;
      |                             ^~~~~~
./samples/SAFE/__tmp_f80e753b.c:142:29: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f80e753b.c:142:29: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f80e753b.c:142:29: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f80e753b.c:142:29: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f80e753b.c:142:29: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f80e753b.c:142:29: error: expected declaration or statement at end of input
